--- a/public/views/home.html
+++ b/public/views/home.html
@@ -7,6 +7,7 @@
 		Username <input type="text" /><br>
 		Password <input type="password" /><br>
 		<input type="submit" value="submit"><a href="#/signup" >Signup</a><br><br>
+		<a href="api/user/googleLogin" value="loginWithFacebook">Google</a><br>
 		<a href="api/user/facebookLogin" value="loginWithFacebook">Facebook</a><br>
 		<a href="api/user/twitterLogin" value="loginWithTwitter">Twitter</a><br>
 		<a href="api/user/googleLogin" value="loginWithGoogle">Facebook</a>
